2000-05-16  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-just-signedonoff-alist): added.
	(tnt-just-signedonoff-delay): added.
	(tnt-build-buddy-buffer): replaced big quoted lambda with quoted
	function tnt-buddy-list-filter.
	(tnt-buddy-list-filter): added.  
	(tnt-buddy-list-filter): now displays just-onoff, indicating
	whether a buddy just signed on or off.  this also means that a
	buddy can be displayed even if they're not online, which didn't
	used to be the case.
	(tnt-shutdown): sets just-signedonoff-alist to nil.
	(tnt-set-buddy-status): calls set-just-signedonoff.
	(tnt-set-just-signedonoff): added.  stores info in the new alist,
	and sets a timer to unset a minute later.
	(tnt-unset-just-signedonoff): added.  called by the timer above.
	removes an element from the alist.  but note that a new entry
	could have been added to the alist in between, in which case we do
	not remove it.  (using a timestamp to ensure that.)
	(tnt-get-just-signedonoff): added.  returns nil if no entry in the
	alist, or " (just signed %s)" with "on" or "off" substituted.

2000-05-15  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-beep): now accepts 'current, as well as 'visible and
	'audible.
	(tnt-beep-on-message-available-event): now defaults to 'current
	instead of 'audible.
	(tnt-beep-on-error): now defaults to 'current instead of 'audible.

2000-05-14  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-beep): added.  beeps visibly, audibly, or not at
	all, according to the argument.
	(tnt-beep-on-message-available-event): added.
	(tnt-beep-on-message-in-visible-buffer): added.
	(tnt-beep-on-error): added.
	(tnt-beep-beep-beep): removed.  (its functionality is now covered
	by the message-available-event and message-in-visible-buffer
	variables above.)
	(tnt-handle-im-in): now uses the new beep variables.
	(tnt-handle-chat-invite): now uses the new beep variable.
	(tnt-error): now uses the new beep variable.
